--- a/Animated_login/Index.css
+++ b/Animated_login/Index.css
@@ -54,9 +54,10 @@ h2{
     transition: .5s;
 }
 
+
 input:focus ~ label,
-input:valid ~ label{
-    top:-5px;
+ input:not(:placeholder-shown) ~ label{
+top: -5px;
 }
 .inputbox input{
     width: 100%;
