--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -15,6 +15,7 @@
 .header__navbar-item{
     margin: 0 8px ;
     position: relative;
+    min-height: 26px;
 }
 
 .header__navbar-item,
@@ -25,8 +26,15 @@
     text-decoration: none;
     font-weight: 300;
 }
+.header__navbar-item,
+.header__navbar-item-link,
+.header__navbar-icon-link{
+    display: inline-flex;
+    align-items: center;
+}
 
 .header__navbar-item:hover,
+.header__navbar-icon-link:hover,
 .header__navbar-item-link:hover{
     color: rgba(255,255,255,0.7);
 }
@@ -48,4 +56,11 @@
     color: var(--white-color);
     text-decoration: none;
   }
-  
+  .header__navbar-icon{
+    font-size: 1.8rem;
+    margin: 0  4px;
+  }
+  .header__navbar-title--no-poiter{
+    cursor: text;
+    color: var(--white-color);
+  }
