--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -17,6 +17,10 @@
     position: relative;
     min-height: 26px;
 }
+.header__navbar-item--has-qr:hover .header__qr{
+    display: block;
+
+}
 
 .header__navbar-item,
 .header__navbar-item-link{
@@ -64,3 +68,46 @@
     cursor: text;
     color: var(--white-color);
   }
+
+  /* header qr code */ 
+.header__qr{
+    background-color: var(--white-color);
+    width: 186px;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    padding: 8px;
+    border-radius: 2px;
+    display: none;
+    top:118%;
+    animation: fadeIn ease-in .3s;
+}
+.header__qr::before{
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    left: 0;
+    top: -16px;
+
+    content: "";
+    display: block;
+}
+.header__qr-img{
+    width: 100%;
+
+}
+.header__qr-link:nth-child(1){
+    margin-left: 11px;
+}
+.header__qr-link:nth-child(2){
+    margin-right: 11px;
+}
+.header__qr_apps{
+    display: flex;
+    justify-content: space-between;
+}
+.header__qr-download-img{
+    height: 15px;
+    
+
+}
