--- a/F8-shoppee/assets/css/base.css
+++ b/F8-shoppee/assets/css/base.css
@@ -2,6 +2,8 @@
     --white-color:#fff;
     --black-color:#000;
     --text-color:#333;
+    --primary-color:#;
+    --primary-color-rbga:rgb(238, 77, 45);
 }
 *{
     box-sizing: inherit;
