--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -22,6 +22,10 @@
 
 }
 
+.header__navbar-item-has-notify:hover .header__notify{
+    display: block;
+}
+
 .header__navbar-item,
 .header__navbar-item-link{
     display: inline-block;
@@ -122,7 +126,23 @@
     right: 0;
     background-color: var(--white-color);
     border: 1px solid #D3D3D3;
+    cursor: default;
+    transform-origin: 80% top ;
+    animation: headerNotifyGrowth ease-in 0.2s;
+    display: none;
 }
+
+@keyframes headerNotifyGrowth{
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
 .header__notify-header{
     height: 40px;
     background-color: var(--white-color);
@@ -133,7 +153,7 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 40px;
-
+    user-select: none;
 }
 .header__notify-list{
     padding-left: 0;
@@ -168,22 +188,27 @@
 .header__notify-name{
     display: block;
     font-size: 1.4rem;
-    color:var(--black-color);
+    color:var(--text-color);
     font-weight: 400 ;
+    line-height: 1.8rem ;
 }
 .header__notify-description{
     display: block;
     font-size: 1.2rem;
-    padding-top: .3rem;
+    margin-top: 4px;
     color : #756F6E
 }
 
 .header__notify-footer{
-text-align: center;
-display: block;
+display: flex;
 }
 .header__notify-footer-btn{
 text-decoration: none;
 color: var(--text-color);
-padding: 50px 50px 50px 50px;
+width: 100%;
+padding: 8px 0;
+margin: auto;
+font-size: 1.4rem;
+font-weight: 400;
+text-align: center;
 }
