--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -131,6 +131,24 @@
     animation: headerNotifyGrowth ease-in 0.2s;
     display: none;
 }
+.header__notify::before{
+    content: "";
+    border-width: 20px 27px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    right: 4px;
+    top: -28px;
+}
+.header__notify::after{
+content: "";
+display: block;
+position: absolute;
+right: -1px;
+top: -18px;
+width: 86px;
+height: 20px;
+}
 
 @keyframes headerNotifyGrowth{
     from{
