--- a/F8-shoppee/assets/css/base.css
+++ b/F8-shoppee/assets/css/base.css
@@ -35,3 +35,28 @@ html{
         opacity: 1;
     }
 }
+/* MODAL  */
+.modal{
+    position: fixed;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+
+}
+.modal__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.modal__body{
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    margin: auto;
+    position: relative;
+    border-radius: 5px;
+    z-index: 3;
+}
