--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -129,6 +129,7 @@
     cursor: default;
     transform-origin: 80% top ;
     animation: headerNotifyGrowth ease-in 0.2s;
+    will-change: opacity,transform;
     display: none;
 }
 .header__notify::before{
