--- a/F8-shoppee/assets/css/base.css
+++ b/F8-shoppee/assets/css/base.css
@@ -3,6 +3,7 @@
     --black-color:#000;
     --text-color:#333;
     --primary-color:#EE4D2D;
+    --border-color:#dbdbdb;
 }
 *{
     box-sizing: inherit;
@@ -52,11 +53,23 @@ html{
     background-color: rgba(0, 0, 0, 0.4);
 }
 .modal__body{
-    width: 300px;
-    height: 300px;
     background-color: white;
     margin: auto;
     position: relative;
     border-radius: 5px;
     z-index: 3;
+}
+/* button style */
+.btn{
+    min-width: 142px;
+    height: 36px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    font-size: 1.5rem;
+    padding: 0;
+}
+.btn.btn--primary{
+    color: var(--white-color) ;
+    background-color: var(--primary-color) ;
 }
