--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -234,6 +234,9 @@ text-align: center;
 /* Authentication modal */
 .auth-form{
     width: 500px;
+    background-color: var(--white-color);
+    overflow: hidden;
+    border-radius: 5px;
 }
 .auth-form__container{
     padding: 0 32px;
@@ -288,5 +291,36 @@ text-align: center;
     
 }
 .auth-form__controls{
+    display: flex;
+    justify-content: flex-end;
     margin-top: 80px;
+}
+.auth-form__controls-back{
+    margin-right: 8px;
+}
+.auth-form__socials{
+    background-color: #F5F5F5;
+    padding: 16px 36px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 22px;
+}
+.auth-form__socials-icon{
+    font-size: 2rem;
+}
+.auth-form__socials--facebook{
+    color: var(--white-color);
+    background-color: rgba(23, 66, 208, 0.78);
+}
+.auth-form__socials--facebook
+.auth-form__socials-icon{
+    color: var(--white-color);
+}
+.auth-form__socials-title{
+    margin: 0 36px;
+}
+.auth-form__socials--google{
+    color: #666;
+    background-color: var(--white-color);
+
 }
