--- a/Card_animation/index.css
+++ b/Card_animation/index.css
@@ -11,7 +11,7 @@ body{
     width: 100%;
     height: 100vh;
     display: flex;
-    align-self: center;
+    align-items: center;
     justify-content: center;
 }
 .container{
