--- a/F8-shoppee/assets/css/base.css
+++ b/F8-shoppee/assets/css/base.css
@@ -74,6 +74,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
+    line-height: 1.6rem;
 }
 .btn.btn--normal:hover{
     background-color: rgba(0, 0, 0, 0.05);
