--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -245,6 +245,8 @@ text-align: center;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 12px;
+    margin-top:12px ;
 }
 .auth-form__heading{
     font-size: 2.2rem;
@@ -323,4 +325,23 @@ text-align: center;
     color: #666;
     background-color: var(--white-color);
 
+}
+.auth-form__help{
+ display: flex;
+ justify-content: flex-end;   
+}
+.auth-form__help-link{
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: #939393;
+}
+.auth-form__help-separate{
+    display: block;
+    height: 22px;
+    border-left: 1px solid var(--border-color);
+    margin: -3px 16px 0;
+
+}
+.auth-form__help-link-forgot{
+    color: var(--primary-color);
 }
