--- a/F8-shoppee/assets/css/base.css
+++ b/F8-shoppee/assets/css/base.css
@@ -36,6 +36,14 @@ html{
         opacity: 1;
     }
 }
+@keyframes growth{
+    from {
+        transform: scale(var(--growth-from)) ;
+    }
+    to{
+        opacity: scale(var(--growth-to)) ;
+    }
+}
 /* MODAL  */
 .modal{
     position: fixed;
@@ -44,7 +52,7 @@ html{
     bottom: 0;
     left: 0;
     display: flex;
-
+    animation: fadeIn linear .2s;
 }
 .modal__overlay{
     position: absolute;
@@ -53,10 +61,12 @@ html{
     background-color: rgba(0, 0, 0, 0.4);
 }
 .modal__body{
+    --growth-from: 0.7;
+    --growth-to :1;
     margin: auto;
     position: relative;
-    
     z-index: 3;
+    animation: growth linear 0.2s;
 }
 /* button style */
 .btn{
