--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -1,5 +1,5 @@
 .header{
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0,#fe6433,#f53e2d) ;
 }
 .header__navbar{
@@ -7,7 +7,7 @@
     justify-content: space-between;
 }
 .header__navbar-list{
-    margin-top: 4px;
+    margin : 4px 0 0 0;
     list-style: none;
     padding-left: 0;
 }
@@ -344,4 +344,32 @@ text-align: center;
 }
 .auth-form__help-link-forgot{
     color: var(--primary-color);
+}
+
+/* HEADER  */
+.header-with-search{
+    height: var(--header-with-search-height);
+    display: flex;
+    align-items: center;
+}              
+.header__logo{
+    width: 200px;
+}
+.header__logo-img{
+    width: 150px;
+}
+.header__search{
+    flex:1;
+    height: 40px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+}
+.header__card{
+    width: 150px;
+    text-align: center;
+}
+.header__card-icon{
+    font-size: 2.4rem;
+    color: var(--white-color);
+    margin-top: 6px;
 }
