--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -351,6 +351,7 @@ text-align: center;
     height: var(--header-with-search-height);
     display: flex;
     align-items: center;
+    margin: 0 8px;
 }              
 .header__logo{
     width: 200px;
@@ -363,6 +364,8 @@ text-align: center;
     height: 40px;
     border-radius: 2px;
     background-color: var(--white-color);
+    display: flex;
+    align-items: center;
 }
 .header__card{
     width: 150px;
@@ -372,4 +375,109 @@ text-align: center;
     font-size: 2.4rem;
     color: var(--white-color);
     margin-top: 6px;
+}
+.header__search-input{
+    flex:1;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--white-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+.header__search-select{
+    border-left: 2px solid #ccc;
+    padding-left: 16px;
+    position: relative;
+}
+
+.header__search-select-label{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+.header__search-select-icon{
+    font-size: 1.4rem;
+    color: #4a4a4a;
+    margin: 0 16px 0 8px;
+    position: relative;
+    top:2px;
+}
+.header__search-btn{
+    background-color: var(--primary-color);
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 3px;
+    margin-right: 3px;
+    outline: none;
+}
+.header__search-btn:hover{
+    cursor: pointer;
+    background-color: rgb(213, 82, 82);
+}
+.header__search-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+
+.header__search-select:hover .header__search-option{
+    display: block;
+
+}
+.header__search-option{
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 130px;
+    list-style: none;
+    box-shadow: 0 1px 2px #ccc ;
+    padding-left: 0;
+    margin-top: 14px;
+    border-radius: 3px;
+  
+    display: none;
+}
+
+.header__search-option::after{
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100px;
+
+    top: -10px;
+    left: 0;
+
+
+}
+.header__search-option-item{
+    background-color: var(--white-color);
+    padding: 8px 8px;
+}
+.header__search-option-item:first{
+    border-top-left-radius: 3px ;
+    border-top-right-radius: 3px ;
+}
+.header__search-option-item:last-child{
+    border-bottom-left-radius: 3px ;
+    border-bottom-right-radius: 3px ;
+}
+.header__search-option-item:hover{
+    background-color: #c1bfbf;
+    cursor: pointer;
+}
+.header__search-option-item span{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 8px ;
+}
+.header__search-option-item i {
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    margin: 0 4px 0 12px;
+
+}
+.header__search-option-item--active i{
+    display: inline-block;
 }
