--- a/F8-shoppee/assets/css/main.css
+++ b/F8-shoppee/assets/css/main.css
@@ -433,9 +433,9 @@ text-align: center;
     list-style: none;
     box-shadow: 0 1px 2px #ccc ;
     padding-left: 0;
-    margin-top: 14px;
+    margin-top: 10px;
     border-radius: 3px;
-  
+    margin-top: 14px;
     display: none;
 }
 
@@ -444,18 +444,17 @@ text-align: center;
     content: "";
     display: block;
     width: 100%;
-    height: 100px;
-
-    top: -10px;
+    height: 20px;
+    top: -20px;
     left: 0;
-
-
 }
 .header__search-option-item{
     background-color: var(--white-color);
     padding: 8px 8px;
+    
 }
-.header__search-option-item:first{
+
+.header__search-option-item:first-child{
     border-top-left-radius: 3px ;
     border-top-right-radius: 3px ;
 }
