--- a/Click_interaction-menu/Clickmenu.css
+++ b/Click_interaction-menu/Clickmenu.css
@@ -116,3 +116,20 @@ body {
 .menu-button-list-item:last-child::after{
     display: none;
 }
+.menu-button-list-item svg{
+    width: 18px;
+    height: 18px;
+
+}
+.menu-button-list-item span{
+    display: inline-block;
+    line-height: 20px;
+    font-size: 14px;
+    margin-left: 8px;
+}
+.list-container.active .menu-button-list-item{
+    animation: faceInItem 0.6s 0.2s forwards;
+}
+.list-container.active .menu-button-list-item{
+    animation: faceInItem 0.6s 0.2s forwards;
+}
