--- a/Animated_website/Web_animate.css
+++ b/Animated_website/Web_animate.css
@@ -59,7 +59,6 @@ button{
     width: 25px;
     margin: 40px auto 0;
     cursor: pointer;
-    
 }
 .social-link img,.usefull-link img{
     width: 25px;
@@ -133,4 +132,38 @@ button{
 .bubbles img:nth-child(7){
     width: 35px;
     animation-delay: 7s ;
+}
+@media screen and (max-width:600px) {
+    h1{
+        font-size: 36ppx;
+
+    }
+    .side-bar{
+        width: 100%;
+        height: 50px;
+        top: auto;
+        bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10px;
+        box-sizing: border-box;
+
+    }
+    .social-link{
+        width: auto;
+        position: unset;
+        transform: none;
+    }
+    .usefull-link{
+        width: 50px;
+        position: unset;
+        display: flex;
+    }
+    .menu{
+        width: 18px;
+        margin: 40px 0;
+    }
+
+
 }
